[package]
name = "near-enhanced-api"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
publish = false
rust-version = "1.61.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.0.1", features = ["macros"] }
actix-web-validator = "3.0.0"
actix-http = "3.0.4"
actix-cors = "0.6.1"
actix-web-prom = "0.6.0"
borsh = { version = "0.9.1" }
derive_more = "0.99.9"
dotenv = "0.15.0"
futures = "0.3.5"
hex = "0.4"
num-traits = "0.2.15"
# https://github.com/paperclip-rs/paperclip/pull/463
# Without this fix, the API URL won't be set properly
paperclip = { git = "https://github.com/near/paperclip", branch = "feat/respect-host-in-v2-to-v3-servers-conversion", features = ["v2", "v3", "actix4", "actix4-validator"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "json"] }
tokio = { version = "1.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.14", features = ["derive"] }

near-primitives = "0.14.0"
near-jsonrpc-client = "0.4.0-beta.0"
near-jsonrpc-primitives = "0.14.0"

[dev-dependencies]
insta = "1"
